# dukememory

./: .dukememory.toml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.ru.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
docs/: GALLERY.md  GETTING_STARTED.md  MCP_TOOLS.md  MEMORY_ARCHITECTURE.md
eval/: dukememory.json
launchd/: com.dukememory.tailscale-ollama-forwarder.plist
migrations/: 0001_initial_pg.sql  0002_context_layers.sql  0003_eval_and_graph_ops.sql  0004_audit_eval_ops.sql  0005_code_memories.sql  0006_code_memory_lifecycle.sql  0007_code_memory_symbol_snapshot.sql  0008_memory_performance_indexes.sql  0009_memory_fragments.sql  0010_code_symbol_embedding_cache.sql  0011_versioned_multi_vector_embeddings.sql  0012_context_planner_quality.sql  0013_agent_task_sessions.sql  0014_feedback_eval_forbidden_ids.sql  0015_retrieval_event_task_session.sql
scripts/: dukememory_codex_hook.sh  dukememory_install.sh  dukememory_postgres.sh  tailscale-ollama-forwarder.mjs
src/: backup.rs  code_assist.rs  code_index.rs  code_reason.rs  codex_config.rs  codex_hooks.rs  codex_integration.rs  compaction.rs  config.rs  context_pack.rs  context_plan.rs  devsystem.rs  embedding.rs  extract.rs  graph_extract.rs  gui.rs  launchd_maintenance.rs  lsif_index.rs  main.rs  maintenance.rs  mcp.rs  mcp_format.rs  ollama.rs  production_audit.rs  project.rs  retrieval.rs  safety.rs  search.rs  semantic_ops.rs  store.rs  validation.rs
(+1 files in other folders)
