[package]
name = "dukememory"
version = "0.1.0"
edition = "2024"
description = "Project-scoped memory engine, retrieval layer, and code graph toolkit for Codex and local agents"
repository = "https://github.com/dukedanya/dukememory"
readme = "README.md"
keywords = ["agents", "memory", "mcp", "retrieval", "codex"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pgvector = { version = "0.4", features = ["postgres"] }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
uuid = { version = "1.18", features = ["v7"] }
